data/derived/comb/progs/unify/prog7647.ml.out
Characters 121-123:
  | Cosine(e1) -> cos(pi * eval (e1,x,y))
                      ^^
Error: This expression has type float but an expression was expected of type
         int
